Force update - Remove light mode

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             </svg>
                         </a>
                         <!-- Twitch -->
-                        <a href="#" aria-label="Twitch">
+                        <a href="https://twitch.tv/lemon1gram" aria-label="Twitch" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="currentColor">
                                 <path
