Force update - Remove light mode

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <p class="lead">Interested in working together? Get in touch.</p>
                     <div class="social-links">
                         <!-- Gmail -->
-                        <a href="mailto:hello@example.com" aria-label="Gmail">
+                        <a href="mailto:lemon.1gram@gmail.com" aria-label="Gmail">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="currentColor">
                                 <path
@@ -117,7 +117,7 @@
                             </svg>
                         </a>
                         <!-- Instagram -->
-                        <a href="#" aria-label="Instagram">
+                        <a href="https://www.instagram.com/daisy1gram/" aria-label="Instagram" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="currentColor">
                                 <path
