Force update - Remove light mode

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Creative Developer</title>
+    <title>Portfolio | Lemon1gram</title>
     <meta name="description"
         content="Minimalistic portfolio of a creative developer specializing in building premium digital experiences.">
 
@@ -33,6 +33,11 @@
     <main>
         <section id="home" class="hero">
             <div class="container hero-content">
+                <!-- Typewriter Animation -->
+                <div id="header-typewriter"
+                    style="font-family: 'Courier New', monospace; font-size: 1.5rem; color: var(--text-secondary); margin-bottom: 1rem; height: 1.5rem;">
+                </div>
+
                 <h1>What...<br>Am I Creating.</h1>
                 <p class="lead">I'm a designer & developer focused on building brands, websites, and apps with clean
                     aesthetics and purpose. (made fully by a clanker btw)</p>
@@ -46,38 +51,35 @@
 
         <section id="work">
             <div class="container reveal">
-                <h2>Selected Work</h2>
+                <h2>Cats</h2>
                 <div class="project-grid">
                     <!-- Project 1 -->
-                    <article class="project-card">
-                        <h3 class="project-title">Project Alpha</h3>
-                        <p class="project-desc">A fintech dashboard designed for clarity and speed. Real-time data
-                            visualization with a minimalist UI.</p>
+                    <article class="project-card" data-image="cat1.png">
+                        <h3 class="project-title">FYOUCAT</h3>
+                        <p class="project-desc">Self Explanatory.</p>
                         <div class="tags">
-                            <span class="tag">Design</span>
-                            <span class="tag">Development</span>
+                            <span class="tag">Kitty</span>
+                            <span class="tag">Rude</span>
                         </div>
                     </article>
 
                     <!-- Project 2 -->
-                    <article class="project-card">
-                        <h3 class="project-title">Neon Studio</h3>
-                        <p class="project-desc">Brand identity and web experience for a boutique creative agency based
-                            in Tokyo.</p>
+                    <article class="project-card" data-image="cat2.png">
+                        <h3 class="project-title">Silly Cat</h3>
+                        <p class="project-desc">Silly looking cat. </p>
                         <div class="tags">
-                            <span class="tag">Branding</span>
-                            <span class="tag">Webflow</span>
+                            <span class="tag">Bleh</span>
+                            <span class="tag">Silly</span>
                         </div>
                     </article>
 
                     <!-- Project 3 -->
-                    <article class="project-card">
-                        <h3 class="project-title">Mono Type</h3>
-                        <p class="project-desc">An open-source typography tool for developers to test font pairings in
-                            real-time.</p>
+                    <article class="project-card" data-image="cat3.png">
+                        <h3 class="project-title">Nerd Cat</h3>
+                        <p class="project-desc">WeLL aKsHuALLy.</p>
                         <div class="tags">
-                            <span class="tag">React</span>
-                            <span class="tag">Tooling</span>
+                            <span class="tag">Smart</span>
+                            <span class="tag">Nerd</span>
                         </div>
                     </article>
                 </div>
