--- a/index.html
+++ b/index.html
@@ -33,14 +33,7 @@
     <nav>
         <div class="container nav-inner">
             <a href="#" class="logo">
-                <svg class="lemon-icon" width="28" height="28" viewBox="0 0 24 24" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M12 2C12 2 14 4 14 6C14 6 16 6 18 8C20 10 22 14 22 18C22 21 19 24 16 24C13 24 10 22 8 20C6 18 4 16 4 13C4 10 6 8 8 6C10 4 12 2 12 2Z"
-                        stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M12 8C12 8 10 10 8 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
-                    <path d="M14 6C14 6 15 5 16 4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
-                </svg>
+                <span class="lemon-icon">🍋</span>
                 Lemon1g
             </a>
             <div class="nav-links">
