--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
                 <div class="project-grid">
                     <!-- Project 1 -->
                     <article class="project-card" data-image="cat1.png">
+                        <div class="project-preview">
+                            <div class="preview-content">
+                                <img src="https://picsum.photos/400/250?random=1" alt="FYOUCAT Preview">
+                                <h4>FYOUCAT Full Preview</h4>
+                                <p>Interactive cat personality test with smooth animations.</p>
+                            </div>
+                        </div>
                         <h3 class="project-title">FYOUCAT</h3>
                         <p class="project-desc">Self Explanatory.</p>
                         <div class="tags">
