--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
 
                     <!-- Project 2 -->
                     <article class="project-card" data-image="cat2.png">
+                        <div class="project-preview">
+                            <div class="preview-content">
+                                <img src="https://picsum.photos/400/250?random=2" alt="Silly Cat Preview">
+                                <h4>Silly Cat Features</h4>
+                                <p>Playful animations and silly cat behaviors that delight.</p>
+                            </div>
+                        </div>
                         <h3 class="project-title">Silly Cat</h3>
                         <p class="project-desc">Silly looking cat. </p>
                         <div class="tags">
@@ -96,6 +103,13 @@
 
                     <!-- Project 3 -->
                     <article class="project-card" data-image="cat3.png">
+                        <div class="project-preview">
+                            <div class="preview-content">
+                                <img src="https://picsum.photos/400/250?random=3" alt="Nerd Cat Preview">
+                                <h4>Nerd Cat Technology</h4>
+                                <p>Advanced features with clean code and smart interactions.</p>
+                            </div>
+                        </div>
                         <h3 class="project-title">Nerd Cat</h3>
                         <p class="project-desc">WeLL aKsHuALLy.</p>
                         <div class="tags">
