--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                     <article class="project-card" data-image="cat1.png">
                         <div class="project-preview">
                             <div class="preview-content">
-                                <img src="https://picsum.photos/400/250?random=1" alt="FYOUCAT Preview">
-                                <h4>FYOUCAT Full Preview</h4>
-                                <p>Interactive cat personality test with smooth animations.</p>
+                                <img src="cat1.png" alt="FYOUCAT Preview">
+                                <h4>FYOUCAT</h4>
+                                <p>Self Explanatory.</p>
                             </div>
                         </div>
                         <h3 class="project-title">FYOUCAT</h3>
@@ -88,9 +88,9 @@
                     <article class="project-card" data-image="cat2.png">
                         <div class="project-preview">
                             <div class="preview-content">
-                                <img src="https://picsum.photos/400/250?random=2" alt="Silly Cat Preview">
-                                <h4>Silly Cat Features</h4>
-                                <p>Playful animations and silly cat behaviors that delight.</p>
+                                <img src="cat2.png" alt="Silly Cat Preview">
+                                <h4>Silly Cat</h4>
+                                <p>Silly looking cat.</p>
                             </div>
                         </div>
                         <h3 class="project-title">Silly Cat</h3>
@@ -105,9 +105,9 @@
                     <article class="project-card" data-image="cat3.png">
                         <div class="project-preview">
                             <div class="preview-content">
-                                <img src="https://picsum.photos/400/250?random=3" alt="Nerd Cat Preview">
-                                <h4>Nerd Cat Technology</h4>
-                                <p>Advanced features with clean code and smart interactions.</p>
+                                <img src="cat3.png" alt="Nerd Cat Preview">
+                                <h4>Nerd Cat</h4>
+                                <p>WeLL aKsHuALLy.</p>
                             </div>
                         </div>
                         <h3 class="project-title">Nerd Cat</h3>
