--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 
     <!-- External Libraries for Advanced Effects -->
@@ -29,6 +29,12 @@
     <div class="cursor-ring"></div>
 
     <canvas id="bg-canvas"></canvas>
+
+    <!-- Scroll Progress Bar -->
+    <div id="scroll-progress"></div>
+
+    <!-- Interactive Bouncing Ball -->
+    <div id="bouncing-ball"></div>
 
     <nav>
         <div class="container nav-inner">
@@ -68,10 +74,10 @@
                 <h2>Cats</h2>
                 <div class="project-grid">
                     <!-- Project 1 -->
-                    <article class="project-card" data-image="cat1.png">
+                    <article class="project-card" data-image="assets/images/cat1.png">
                         <div class="project-preview">
                             <div class="preview-content">
-                                <img src="cat1.png" alt="FYOUCAT Preview">
+                                <img src="assets/images/cat1.png" alt="FYOUCAT Preview">
                                 <h4>FYOUCAT</h4>
                                 <p>Self Explanatory.</p>
                             </div>
@@ -85,10 +91,10 @@
                     </article>
 
                     <!-- Project 2 -->
-                    <article class="project-card" data-image="cat2.png">
+                    <article class="project-card" data-image="assets/images/cat2.png">
                         <div class="project-preview">
                             <div class="preview-content">
-                                <img src="cat2.png" alt="Silly Cat Preview">
+                                <img src="assets/images/cat2.png" alt="Silly Cat Preview">
                                 <h4>Silly Cat</h4>
                                 <p>Silly looking cat.</p>
                             </div>
@@ -102,10 +108,10 @@
                     </article>
 
                     <!-- Project 3 -->
-                    <article class="project-card" data-image="cat3.png">
+                    <article class="project-card" data-image="assets/images/cat3.png">
                         <div class="project-preview">
                             <div class="preview-content">
-                                <img src="cat3.png" alt="Nerd Cat Preview">
+                                <img src="assets/images/cat3.png" alt="Nerd Cat Preview">
                                 <h4>Nerd Cat</h4>
                                 <p>WeLL aKsHuALLy.</p>
                             </div>
@@ -208,7 +214,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
