--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@
         </div>
     </footer>
 
+    <!-- Easter Egg Button -->
+    <button id="chaos-btn" class="chaos-button">Click Me!</button>
+
     <!-- Project Detail Modal -->
     <div id="project-modal" class="modal-overlay">
         <div class="modal-content">
