--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h2>Cats</h2>
                 <div class="project-grid">
                     <!-- Project 1 -->
-                    <article class="project-card" data-image="assets/images/cat1.png">
+                    <a href="projects/fyoucat.html" class="project-card" data-image="assets/images/cat1.png">
                         <div class="project-preview">
                             <div class="preview-content">
                                 <img src="assets/images/cat1.png" alt="FYOUCAT Preview">
@@ -88,10 +88,10 @@
                             <span class="tag">Kitty</span>
                             <span class="tag">Rude</span>
                         </div>
-                    </article>
+                    </a>
 
                     <!-- Project 2 -->
-                    <article class="project-card" data-image="assets/images/cat2.png">
+                    <a href="projects/sillycat.html" class="project-card" data-image="assets/images/cat2.png">
                         <div class="project-preview">
                             <div class="preview-content">
                                 <img src="assets/images/cat2.png" alt="Silly Cat Preview">
@@ -105,10 +105,10 @@
                             <span class="tag">Bleh</span>
                             <span class="tag">Silly</span>
                         </div>
-                    </article>
+                    </a>
 
                     <!-- Project 3 -->
-                    <article class="project-card" data-image="assets/images/cat3.png">
+                    <a href="projects/nerdcat.html" class="project-card" data-image="assets/images/cat3.png">
                         <div class="project-preview">
                             <div class="preview-content">
                                 <img src="assets/images/cat3.png" alt="Nerd Cat Preview">
@@ -122,7 +122,7 @@
                             <span class="tag">Smart</span>
                             <span class="tag">Nerd</span>
                         </div>
-                    </article>
+                    </a>
                 </div>
             </div>
         </section>
@@ -196,26 +196,7 @@
     </footer>
 
     <!-- Easter Egg Button -->
-    <button id="chaos-btn" class="chaos-button">Click Me!</button>
-
-    <!-- Project Detail Modal -->
-    <div id="project-modal" class="modal-overlay">
-        <div class="modal-content">
-            <button class="modal-close" aria-label="Close modal">&times;</button>
-            <div class="modal-body">
-                <div class="modal-visual-placeholder">
-                    <span>Project Preview / Video Area</span>
-                </div>
-                <h3 id="modal-title">Project Title</h3>
-                <div class="tags" id="modal-tags">
-                    <!-- Tags will be injected here -->
-                </div>
-                <p id="modal-desc" class="modal-description">Description goes here...</p>
-                <div class="modal-footer">
-                </div>
-            </div>
-        </div>
-    </div>
+    <button id="chaos-btn" class="chaos-button">CHAOS<br>MODE</button>
 
     <!-- Load Modules sequentially (Order matters) -->
     <script src="assets/js/modules/cursor.js"></script>
